5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1771_1583.log
== TEST (2019-05-23 00:04:56) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
print(len(x))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:07:15) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
print(x[:2],".",x[2:5])
-- OUTPUT:
12 . 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:07:35) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
print(x[:3],".",x[3:6])
-- OUTPUT:
123 .
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:08:43) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
print(x[:3]+"."+[3:6])
-- ERROR:
File "XXXX", line 2
    print(x[:3]+"."+[3:6])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:08:56) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
print(x[:3]+".")
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:09:22) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
z=(x[:3]+".")
f=z+x[3:6]
print(f)
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:14:08) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=5):
   z=x[0:3]+"x"
	print(x)
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:14:18) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=5):
     z=x[0:3]+"x"
	   print(x)
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:14:43) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=5):
	z=x[0:3]+"."
 
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:14:48) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=5):
	z=x[0:3]+"."
	print(z)
 
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:15:27) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=5):
	z=x[0:3]+"."
	print(z)
 
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:15:36) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	print(z)
 
	
-- ERROR:
File "XXXX", line 4
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:15:53) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."+[3:6]
	print(z)
 
	
-- ERROR:
File "XXXX", line 3
    z=x[0:3]+"."+[3:6]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:16:06) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
 
	
-- ERROR:
File "XXXX", line 3
    z=x[0:3]+"."+[3:6]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:18:09) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x>6))and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
	  
	  
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:18:16) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x>6))and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
	  
	  
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:18:41) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x)>6)and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
	  
	  
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 00:18:48) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x)>6)and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
	  
	  
 
	
-- EXECUTION TIME:
0.155933
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:19:23) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x)>6)and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
elif(len(x)>9)and(len(x)<=12):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	z=z+"."
	z=z+x[9:12]
	print(z)	
	  
	  
 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 00:19:31) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
if(len(x)>3)and(len(x)<=6):
	z=x[0:3]+"."
	z=z+x[3:6]
	print(z)
elif(len(x)>6)and(len(x)<=9):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	print(z)
elif(len(x)>9)and(len(x)<=12):
	z=x[0:3]+"."
	z=z+x[3:6]
	z=z+"."
	z=z+x[6:9]
	z=z+"."
	z=z+x[9:12]
	print(z)	
	  
	  
 
	
-- EXECUTION TIME:
0.286335
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:24:02) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=x[r:z]+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 00:24:10) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=x[r:z]+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- EXECUTION TIME:
0.129226
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
0
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:24:14) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=x[r:z]+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:24:21) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=x[r:z]+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:26:06) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	t=x[r:z]
	g=g+t
	g=g+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:26:18) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
t=0
while(len(x)>z):
	t=x[r:z]
	g=g+t
	g=g+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:27:03) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
t=0
while(len(x)>z):
	g=g+x[r:z]
	g=g+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:27:33) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=x[r:z]+"."
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:28:16) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=0
z=3
r=0
while(len(x)>z):
	g=g+(x[r:z]+".")
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:32:26) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=""
z=3
r=0
while(len(x)>z):
	g=g+(x[r:z]+".")
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:32:32) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=""
z=3
r=0
while(len(x)>z):
	g=g+(x[r:z]+".")
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:32:38) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=""
z=3
r=0
while(len(x)>z):
	g=g+(x[r:z]+".")
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:41:33) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
g=""
z=3
r=0
while(len(x)>z):
	g=(x[r:z]+".")
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    elif(len(x>6))and(len(x)<=9):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:14:17) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=(x[r:z]+y
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
File "XXXX", line 7
    r=r+3
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:48:32) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=(x[r:z]+y
	r=r+3
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
File "XXXX", line 7
    r=r+3
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:48:42) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=(x[r:z]+y
	
	z=z+3
	g=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
File "XXXX", line 8
    z=z+3
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:50:45) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=x[r:z]+y
	r=r+3
	z=z+3
	f=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(g)	
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:50:55) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=x[r:z]+y
	r=r+3
	z=z+3
	f=g+x[r:z]
print(g)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(g)	
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:50:59) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=x[r:z]+y
	r=r+3
	z=z+3
	f=g+x[r:z]
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:51:04) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
while(len(x)>z):
	g=x[r:z]+y
	r=r+3
	z=z+3
	f=g+x[r:z]
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:52:05) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	g=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=g+x[r:z]
	d=f
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:52:11) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	g=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=g+x[r:z]
	d=f
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:52:19) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	g=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=g+x[r:z]
	d=f
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:52:59) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	g=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=g+x[r:z]
	r=r+3
	z=z+3
	d=f
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:53:07) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	g=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=g+x[r:z]
	r=r+3
	z=z+3
	d=f
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:56:54) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:08) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:57:29) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- EXECUTION TIME:
0.201873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1583/main.py", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:31) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:37) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:43) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:47) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:57:56) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:58:02) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:58:15) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:58:21) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:58:43) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]
	
print(f)	
	
	
	

 
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(f)	
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:59:15) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]

if(len(x)==3):
	f=x
print(f)	
	
	
	

 
	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:59:19) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]

if(len(x)==3):
	f=x
print(f)	
	
	
	

 
	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:59:22) 
-- CODE:
x=input("Digite um numero mulitplo de 3: ")
y="."
z=3
r=0
d=""
while(len(x)>z):
	d=d+(x[r:z]+y)
	r=r+3
	z=z+3
	f=d+x[r:z]

if(len(x)==3):
	f=x
print(f)	
	
	
	

 
	
-- EXECUTION TIME:
0.147769
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
